Name:                xlsx-parser

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.0

Synopsis:            Simple and incomplete Excel file parser
Description:
    This library can help you to get some data from your
    Excel files. Small subset of xlsx format is supported.
    TODO: add link to ECMA standard.

Homepage:            https://github.com/f-me/xlsx-parser
License:             MIT
License-file:        LICENSE
Author:              Timofey Cherganov, Max Taldykin
Maintainer:          max@formalmethods.ru



Category:            Data
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6


Library
  Hs-source-dirs:    src
  Exposed-modules:   Data.Xlsx.Parser
  
  Build-depends:     base
                    ,containers   >= 0.4.1
                    ,transformers == 0.2.*
                    ,bytestring, text
                    ,conduit      == 0.4.*
                    ,xml-types    == 0.3.*
                    ,xml-conduit  == 0.7.*
                    ,mtl          == 2.0.*
                    ,zip-archive  == 0.1.*
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
source-repository head
  type:     git
  location: git://github.com/f-me/xlsx-parser.git

